# UOIT_URC

./: .gitignore  LICENSE  README.md
devel/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/share/rover_controls/cmake/: rover_controlsConfig.cmake
devel/share/rover_description/cmake/: rover_descriptionConfig.cmake
devel/share/rover_tutorials/cmake/: rover_tutorialsConfig.cmake
devel/share/rplidar_ros/cmake/: rplidar_rosConfig.cmake
devel/share/testbot_description/cmake/: testbot_descriptionConfig.cmake
devel/share/zed_depth_sub_tutorial/cmake/: zed_depth_sub_tutorialConfig.cmake
doc/navigation/rtabmap/: README.md
doc/robot_model/: README  README.md
src/rover_controls/: CMakeLists.txt  package.xml
src/rover_controls/firmware/: CMakeLists.txt  motor_control.cpp
src/rover_controls/src/: README.md  joystick_controller.cpp
src/rover_description/: CMakeLists.txt  package.xml
src/rover_description/launch/: rover.launch
src/rover_description/rviz/: rover_model.rviz
src/rover_description/urdf/: .directory  .generated_model.urdf.kate-swp  README  generated_model.urdf  rover_model.urdf  rover_model.urdf.xacro  test.rviz
src/rover_tutorials/: CMakeLists.txt  package.xml
src/rover_tutorials/launch/: rover.launch
src/rover_tutorials/src/: pid_controller.cpp
src/rplidar_ros/: README.md
src/xbee-sx-rf/: CMakeLists.txt  package.xml
src/xbee-sx-rf/src/: README.md  xbee_broadcast.py  xbee_receiver.py
xbee_sx_rf/: README.md
xbee_sx_rf/src/: README.md  xbee_broadcast.py  xbee_receiver.py
xbee_sx_rf/src/digi/xbee/: README.md  devices.py  (+2 more)
(+14 files in other folders)
